--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="ico.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/abca628734.js" crossorigin="anonymous"></script>
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>ChinoShop</title>
   </head>
   <body>
     <noscript>
